@@ -1,4 +1,4 @@
 #Ibator build version info
-#Thu Jan 01 19:08:47 CST 2009
-version=1.2.1
-buildNum=696
+#Wed Jan 07 10:10:05 CST 2009
+version=1.2.2
+buildNum=700
