@@ -19,6 +19,7 @@
 <h2>Version 1.2.2</h2>
 <h3>Bugs Fixed</h3>
 <ul>
+  <li>NPE when no DAOs are generated.</li>
 </ul>
 
 <h3>Enhancements</h3>
