@@ -1,11 +1,9 @@
 package ibatortest.execute.miscellaneous;
 
 import ibatortest.BaseTest;
-import ibatortest.generated.miscellaneous.dao.AnotherawfultableDAO;
 import ibatortest.generated.miscellaneous.dao.MyObjectDAO;
-import ibatortest.generated.miscellaneous.dao.impl.AnotherawfultableDAOImpl;
-import ibatortest.generated.miscellaneous.dao.impl.MyObjectDAOImpl;
 import ibatortest.generated.miscellaneous.dao.RegexrenameDAO;
+import ibatortest.generated.miscellaneous.dao.impl.MyObjectDAOImpl;
 import ibatortest.generated.miscellaneous.dao.impl.RegexrenameDAOImpl;
 
 public class BaseMiscellaneousTest extends BaseTest {
@@ -23,11 +21,6 @@ public class BaseMiscellaneousTest extends BaseTest {
     
     protected RegexrenameDAO getRegexrenameDAO() {
         RegexrenameDAOImpl dao = new RegexrenameDAOImpl(getSqlMapClient());
-        return dao;
-    }
-    
-    protected AnotherawfultableDAO getAnotherawfultableDAO() {
-        AnotherawfultableDAO dao = new AnotherawfultableDAOImpl(getSqlMapClient());
         return dao;
     }
 }
